--- a/.github/workflows/01_learn-github-actions.yml
+++ b/.github/workflows/01_learn-github-actions.yml
@@ -1,21 +1,15 @@
 # Pipeline
-name: learn-github-action # Nom du workflow
+name: hello-word # Nom du workflow
 on: [push]
 jobs:
   # Premier hello word
-  check-bats-version:
+  hello-word:
     # Définition du runner (ubuntu:latest)
     runs-on: ubuntu-latest
     # Déclaration de la liste des steps
-    steps:
-      # Action par défaut qui permet de récupérer le code de répo
+    steps:     
       - uses: actions/checkout@v3
-      # Action qui permet d'installer node
-      - uses: actions/setup-node@v3
-        # with permet de passer des arguments
-        with:
-          # Indication de l'installation de la version 14
-          node-version: '14'
-      # Run permet d'executer une commande bash
-      - run: echo "hello word"
+      - name: hello word
+       # Run permet d'executer une commande bash
+        run: echo "hello word"
    
