--- a/.github/workflows/02_env-if.yml
+++ b/.github/workflows/02_env-if.yml
@@ -10,6 +10,6 @@ jobs:
       - name: "Dit bonjour"
         if: ${{env.NAME !='Mahamadou'}}
         run: echo "Coucou "$NAME! tu  n'est pas $NAME ?!"
-      - name: "coucou $NAME"
+      - name: "coucou Mahamadou"
         if: ${{env.NAME =='Mahamadou'}}
         run : echo " salut $NAME, tu alaire en pleine forme"
