--- a/.github/workflows/artifac_upload_download.yml
+++ b/.github/workflows/artifac_upload_download.yml
@@ -3,14 +3,29 @@ name: Upload Artifact
 on: workflow_dispatch
 
 jobs:
-    Upload:
-      name: Upload
+    upload:
+      name: upload
       runs-on: ubuntu-latest
       steps:
-        - name: Creer le fichier
+        - name: lire le fichier
           run: "coucou toi artifact"
         - name: Upload Artifact
           uses: actions/upload-artifact@v3
           with:
             name: Artifact
             path: artifact.txt
+    
+    
+    downmload:
+
+      name: download
+      needs: upload
+      runs-on: ubuntu-latest
+      steps:
+        - name: download
+          run: "coucou toi artifact"
+        - name: Upload Artifact
+          uses: actions/download-artifact@v3
+          with:
+            name: Artifact
+            path: cat artifact.txt
